# instagram_filter_real_ai

./: .gitignore  README.md
embeddings/: pyproject.toml
embeddings/embeddings_ai/: p01_9a13178e3ee6607de66da8a13e337e82b420edf1931e5325de1f75087da0c745.json  p02_39fff262c8e5bfc8592fba1051bd982f989ac08f7eb74776379ce57b6fbf1d1f.json  p03_719f3a060006758ae04ac9bb8aa9208a0271854416f4d9d464f013810ec83b8e.json  p04_aed059c4f0f6ee575d0ddeff96b0503065230c1e10cc7774c2fbf8c229206bba.json  p05_100b0a2e31508d9e3b9a30a52d0327fac5a7ee42ccbbc41a48c72838214313ca.json  p06_37dd32efae23f46a9e466b97757355bbf0e4b17beff48a12d3e45522bd9b31d8.json  p07_bb85ea499ebb2669034e2ffc0559dbe4a020fbdc1f09dbba2b5b4e9f1c3f7d79.json  p08_190876a2d9ff6ee337b9cb58672d6b778379a9f84bdf04ca0f3e94555706c0f7.json  p09_baebb8982088d49be19a8873f68b662b9cef32a1fac7c590f700223098fc1555.json  p10_5e9da55d2507dd1d3298bdb653e748747d68d0e3c03b1c34fd2380877223cf15.json  p11_99b44d4473c4ffb1563e5dd21f13e8178e4404935da1ee9c17ec891d4113e20a.json  p12_1f51c8a24b386a8e93848183f5d45ec7dd0074d6efa3bcf62df6ccc07461edea.json  p13_03e8746fa28f466fb2bef830f6f1e7235658797b6d73bb81f4e55730ae16b7a1.json  p14_13b95a46cedee339e8600247d7ccd7535a0c0da17fd6688b4aed671600b255e9.json  (+40 more)
embeddings/embeddings_real/: p01.json  (+53 more)
evaluation/: ai_images.csv  ai_images_filtered_iqa.json  ai_images_iqa.json  download.sh  evaluation.ipynb  iqa_commands.md  real_images.csv  real_images_filtered_iqa.json  real_images_iqa.json
features/: ai_images.json  commands.md  feature_analysis_dataset.ipynb  features.py  pyproject.toml  real_images.json
