[project]
name = "features"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cpbd>=1.0.7",
    "numpy>=2.3.1",
    "opencv-python>=4.11.0.86",
    "pywavelets>=1.8.0",
    "scikit-build>=0.18.1",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.1",
    "scikit-video>=1.1.11",
]
